Bug 70397 - [IVB BYT Haswell] Mplayer crashed while playing some mpeg2 files
Summary: [IVB BYT Haswell] Mplayer crashed while playing some mpeg2 files
Status: VERIFIED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: ykzhao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-12 08:58 UTC by zhenxiang.li
Modified: 2013-10-16 02:06 UTC (History)
3 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description zhenxiang.li 2013-10-12 08:58:43 UTC
Environment:
--------------
platform: IVB/BYT
libva(staging): f5c913765e6af38d835cacf339054ccc60bddefb
intel_driver(staging): 8a0a61ce47e086ac156602c3daaf70f20e
mplayer(hwaccel-vaapi): 1923fa10ed77bbf8408f2ce312d85a97dab1f0f3
ffmpeg: bc63a760837c8b173f2a3820ccb06f9cac1c07b4

Reproduce steps:
--------------
cmd: mplayer -nosound -fps 30 -vo vaapi -va vaapi bitstreams/tcela-8-fp-dp.bits
The three following files which have this problem are:
/tcela-8-fp-dp.bits
/tcela-9-fp-dp.bits
/tcela-10-killer.bits
Under the directory /media_tools/decoder/bistreams/

Log Info:
--------------

mplayer -nosound -fps 30 -vo vaapi -va vaapi bitstreams/tcela-8-fp-dp.bits

MPlayer SVN-r36265-4.6.3 (C) 2000-2013 MPlayer Team
Playing bitstreams/tcela-8-fp-dp.bits.
libavformat version 55.7.100 (internal)
MPEG-ES file format detected.
VIDEO:  MPEG2  720x480  (aspect 2)  30.000 fps  15000.0 kbps (1875.0 kbyte/s)
Load subtitles in bitstreams/
libva info: VA-API version 0.34.0
libva info: va_getDriverName() returns 0
libva info: Trying to open /opt/X11R7/lib/dri/i965_drv_video.so
libva info: Found init function __vaDriverInit_0_34
libva info: va_openDriver() returns 0
==========================================================================
Opening video decoder: [ffmpeg] FFmpeg's libavcodec codec family
libavcodec version 55.9.100 (internal)
Selected video codec: [ffmpeg2] vfm: ffmpeg (FFmpeg MPEG-2)
==========================================================================
Audio: no sound
FPS forced to be 30.000  (ftime: 0.033).
Starting playback...
[VD_FFMPEG] Trying pixfmt=0.
[VD_FFMPEG] XVMC-accelerated MPEG-2.
Movie-Aspect is 1.33:1 - prescaling to correct movie aspect.
VO: [vaapi] 720x480 => 720x540 MPEG-2 VA-API Acceleration
[VD_FFMPEG] XVMC-accelerated MPEG-2.
[mpeg2video @ 0x7f94806e1260]allocate dummy last picture for field based first keyframe
mplayer: i965_drv_video.c:1823: i965_UnmapBuffer: Assertion `obj_buffer && obj_buffer->buffer_store' failed.

MPlayer interrupted by signal 6 in module: decode_video
- MPlayer crashed. This shouldn't happen.
  It can be a bug in the MPlayer code _or_ in your drivers _or_ in your
  gcc version. If you think it's MPlayer's fault, please read
  DOCS/HTML/en/bugreports.html and follow the instructions there. We can't and
  won't help unless you provide this information when reporting a possible bug.
Comment 1 zhenxiang.li 2013-10-14 01:13:11 UTC
We think it's a regression, since it passed before.
Comment 2 ykzhao 2013-10-14 03:26:24 UTC
Can the mentioned mpeg2 video clip be played back as expected on Ivybridge?

Thanks.
   Yakui
Comment 3 zhenxiang.li 2013-10-14 04:04:10 UTC
Yeah, this file can be played back by excuting the cmd: mplayer bitstreams/tcela-8-fp-dp.bits
Comment 4 ykzhao 2013-10-15 03:14:19 UTC
This issue is also reproduced on the haswell machine. 

In fact this issue is related with that the invalid parameter is passed by the mplayer and then the driver crashes when applying the assert check.

I already push the corresponding fix into the staging branch.

Will you please help to verify that the issue still exists?

Thanks.
   Yakui
Comment 5 zhenxiang.li 2013-10-16 01:06:52 UTC
It worked with manual testing with your patch.
Comment 6 zhenxiang.li 2013-10-16 02:06:31 UTC
passed during nightly testing


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.