Add more strict check to fix crash issue caused by invalid parameter

This is to fix the crash issue in https://bugs.freedesktop.org/show_bug.cgi?id=70397

Signed-off-by: Zhao Yakui <yakui.zhao@intel.com>