src/i965_drv_video.c
@@ -1820,6 +1820,9 @@ i965_UnmapBuffer(VADriverContextP ctx, VABufferID buf_id)
     struct object_buffer *obj_buffer = BUFFER(buf_id);
     VAStatus vaStatus = VA_STATUS_ERROR_UNKNOWN;
 
+    if ((buf_id & OBJECT_HEAP_OFFSET_MASK) != BUFFER_ID_OFFSET)
+        return VA_STATUS_ERROR_INVALID_BUFFER;
+
     assert(obj_buffer && obj_buffer->buffer_store);
     assert(obj_buffer->buffer_store->bo || obj_buffer->buffer_store->buffer);
     assert(!(obj_buffer->buffer_store->bo && obj_buffer->buffer_store->buffer));
@@ -2028,7 +2031,6 @@ i965_decoder_render_picture(VADriverContextP ctx,
 
     for (i = 0; i < num_buffers && vaStatus == VA_STATUS_SUCCESS; i++) {
         struct object_buffer *obj_buffer = BUFFER(buffers[i]);
-        assert(obj_buffer);
 
         if (!obj_buffer)
             return VA_STATUS_ERROR_INVALID_BUFFER;
@@ -2151,7 +2153,6 @@ i965_encoder_render_picture(VADriverContextP ctx,
 
     for (i = 0; i < num_buffers; i++) {  
         struct object_buffer *obj_buffer = BUFFER(buffers[i]);
-        assert(obj_buffer);
 
         if (!obj_buffer)
             return VA_STATUS_ERROR_INVALID_BUFFER;
@@ -2244,7 +2245,6 @@ i965_proc_render_picture(VADriverContextP ctx,
 
     for (i = 0; i < num_buffers && vaStatus == VA_STATUS_SUCCESS; i++) {
         struct object_buffer *obj_buffer = BUFFER(buffers[i]);
-        assert(obj_buffer);
 
         if (!obj_buffer)
             return VA_STATUS_ERROR_INVALID_BUFFER;
@@ -2279,7 +2279,10 @@ i965_RenderPicture(VADriverContextP ctx,
 
     if (!obj_context)
         return VA_STATUS_ERROR_INVALID_CONTEXT;
-    
+
+    if (num_buffers <= 0)
+        return VA_STATUS_ERROR_INVALID_PARAMETER;
+
     obj_config = obj_context->obj_config;
     assert(obj_config);
 
